@@ -181,7 +181,7 @@ public class ZWayZAutomationDeviceHandler extends ZWayDeviceHandler {
             }
 
             Calendar lastUpdateOfDevice = Calendar.getInstance();
-            lastUpdateOfDevice.setTimeInMillis(new Long(device.getUpdateTime()) * 1000);
+            lastUpdateOfDevice.setTimeInMillis(Long.valueOf(device.getUpdateTime()) * 1000);
 
             if (lastUpdate == null || lastUpdateOfDevice.after(lastUpdate)) {
                 lastUpdate = lastUpdateOfDevice;
